--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /storage/*.key
 /vendor
 .env
+.env.testing
 .env.backup
 .phpunit.result.cache
 Homestead.json
@@ -15,3 +16,5 @@ yarn-error.log
 _ide_helper.php
 _ide_helper_models.php
 .phpstorm_meta.php
+
+.idea
