--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,14 @@ steps:
     name: "gcr.io/$PROJECT_ID/docker-compose:1.24.0"
     args: ["-f", "docker-compose.yaml", "up", "-d"]
 
+  - id: "???????"
+    name: 'docker'
+    args: ['ps']
+
+  - id: "Chown in /var/www"
+    name: 'docker'
+    args: ['exec','-u','root','-t','micro-videos-app','chown','-R','www-data:www-data','/var/www']
+
   - id: "(2) Construindo aplicação no container app - composer"
     name: "docker"
     args: ["exec", "-t", "micro-videos-app", "composer", "install"]
