--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
     name: "gcr.io/$PROJECT_ID/docker-compose:1.24.0"
     args: ["-f", "docker-compose.yaml", "up", "-d"]
 
-  - id: "???????"
+  - id: "[debug] ver containers"
     name: 'docker'
     args: ['ps', '-a']
 
