--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,10 @@ steps:
     name: "gcr.io/$PROJECT_ID/docker-compose:1.24.0"
     args: ["-f", "docker-compose.yaml", "up", "-d"]
 
+  - id: "[debug] ver imagens"
+    name: 'docker'
+    args: ['images']
+
   - id: "[debug] ver containers"
     name: 'docker'
     args: ['ps', '-a']
